--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,95 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# development
+/.dev
+
+# Audio files
+*.mp3
+*.flac
+*.wav
+*.aiff
+*.aif
+*.aifc
+*.m4a
+*.wma
+*.aac
+*.ogg
+
+# Video files
+*.webm
+*.mp4
+*.flv
+*.avi
+*.mov
+*.mkv
+*.wmv
+*.mpg
+*.mpeg
+*.m4v
+*.3gp
+
+# JPEG
+*.jpg
+*.jpeg
+*.jpe
+*.jif
+*.jfif
+*.jfi
+
+# JPEG 2000
+*.jp2
+*.j2k
+*.jpf
+*.jpx
+*.jpm
+*.mj2
+
+# JPEG XR
+*.jxr
+*.hdp
+*.wdp
+
+# Graphics Interchange Format
+*.gif
+
+# RAW
+*.raw
+
+# Web P
+*.webp
+
+# Portable Network Graphics
+*.png
+
+# Animated Portable Network Graphics
+*.apng
+
+# Multiple-image Network Graphics
+*.mng
+
+# Tagged Image File Format
+*.tiff
+*.tif
+
+# Scalable Vector Graphics
+*.svg
+*.svgz
+
+# Portable Document Format
+*.pdf
+
+# X BitMap
+*.xbm
+
+# BMP
+*.bmp
+*.dib
+
+# ICO
+*.ico
+
+# 3D Images
+*.3dm
+*.max
